<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartDolly</string>
    <string name="title_status">Status</string>
    <string name="title_dolly">Dolly</string>
    <string name="title_motor">Motor</string>
    <string name="title_camera">Camera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="status_text">Status...</string>
    <string name="dolly_settings_text">Dolly Settings...</string>
    <string name="motor_settings_text">Motor Settings...</string>
    <string name="camera_settings_text">Camera Settings...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shots_taken_title_text">Shots taken:</string>
    <string name="home_limit_text">Home</string>
    <string name="end_limit_text">End</string>
    <string name="low_battery_limit_text">10.5V</string>
    <string name="battery_title">Battery:</string>
    <string name="end_position_title">End position:</string>
    <string name="current_position_title">Position:</string>
    <string name="total_shots_title">Total shots:</string>
    <string name="shots_taken_title">Shots taken:</string>
    <string name="total_time_title">Total time:</string>
    <string name="run_time_title">Run time:</string>
    <string name="interval_title">Interval (ms)</string>
    <string name="unlocked_text">Unlocked</string>
    <string name="locked_text">Locked</string>
    <string name="total_time_text">Time</string>
    <string name="max_length_title">Length (mm)</string>
    <string name="step_size_title">Step size (mm)</string>
    <string name="start_text">START</string>
    <string name="go_home_text">Go Home</string>
    <string name="measure_text">Measure</string>
    <string name="exposure_time_title">Exposure time</string>
    <string name="milliseconds_abbreviation">ms</string>
    <string name="steps_per_unit_title">Steps / Unit</string>
    <string name="millimeter_abbreviation">mm</string>
    <string name="speed_title">Speed</string>
    <string name="mm_per_sec_abbreviation">mm/sec</string>
    <string name="ramp_title">Ramp</string>
    <string name="post_motor_time_title">Post motor time</string>
    <string name="post_exposure_time_title">Post exposure time</string>
    <string name="focus_time_title">Focus time</string>

</resources>
